[gd_scene load_steps=17 format=3 uid="uid://bugujjntax2o2"]

[ext_resource type="Script" path="res://Scripts/World.gd" id="1_kbcnx"]
[ext_resource type="Script" path="res://Scripts/Camera3D.gd" id="2_21l07"]
[ext_resource type="PackedScene" uid="uid://d1q1x2d35pig3" path="res://Scenes/Target.tscn" id="3_eavgj"]
[ext_resource type="PackedScene" uid="uid://v72th6qba4pm" path="res://Scenes/Player.tscn" id="4_a5htx"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="5_qc7ky"]
[ext_resource type="Material" uid="uid://bbr7mmydhvbny" path="res://Orange_x3.tres" id="6_4oh8s"]
[ext_resource type="MeshLibrary" uid="uid://dfevg3lwe37he" path="res://cube.tres" id="7_loxtq"]
[ext_resource type="PackedScene" uid="uid://bt1e3b0ddr7x6" path="res://Scenes/Clock.tscn" id="7_x8y3u"]
[ext_resource type="Script" path="res://Scripts/GridMap.gd" id="8_2jqwb"]
[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="10_xr656"]
[ext_resource type="PackedScene" uid="uid://f3syq8bi6npf" path="res://Scenes/Zombie_Head.tscn" id="11_w2c7v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4wc4c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5cnn"]
bg_color = Color(0.215686, 0.54902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kc20v"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dlt3w"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="NavigationMesh" id="NavigationMesh_upwes"]
vertices = PackedVector3Array(-7.25, 1.5, 0.1, -1.75, 1.5, 0.1, -1.5, 1.5, -0.65, 0, 1.5, -9.15, -7.25, 1.5, -9.15, -1.5, 1.5, -0.65, 0, 1.5, -0.65, 0, 1.5, -9.15, 1.5, 1.5, -0.65, 1.75, 1.5, 0.1, 9.75, 1.5, 0.1, 9.75, 1.5, -9.15, 0, 1.5, -9.15, 0, 1.5, -9.15, 0, 1.5, -0.65, 1.5, 1.5, -0.65, -1.5, 1.5, 0.6, -1.75, 1.5, 0.1, -7.25, 1.5, 0.1, 0, 1.5, 0.85, -1.5, 1.5, 0.6, -7.25, 1.5, 0.1, -7.25, 1.5, 9.85, 0, 1.5, 9.85, 9.75, 1.5, 0.1, 1.75, 1.5, 0.1, 1.5, 1.5, 0.6, 1.5, 1.5, 0.6, 0, 1.5, 0.85, 0, 1.5, 9.85, 9.75, 1.5, 9.85, 9.75, 1.5, 0.1)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 4), PackedInt32Array(2, 4, 3), PackedInt32Array(7, 6, 5), PackedInt32Array(9, 8, 10), PackedInt32Array(10, 8, 11), PackedInt32Array(11, 8, 12), PackedInt32Array(15, 14, 13), PackedInt32Array(18, 17, 16), PackedInt32Array(20, 19, 21), PackedInt32Array(21, 19, 23), PackedInt32Array(21, 23, 22), PackedInt32Array(26, 25, 24), PackedInt32Array(27, 31, 28), PackedInt32Array(28, 31, 29), PackedInt32Array(29, 31, 30)]

[node name="World" type="Node3D"]
script = ExtResource("1_kbcnx")

[node name="Health" type="Control" parent="."]
layout_direction = 2
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="HealthBar" type="ProgressBar" parent="Health"]
z_index = 1
custom_minimum_size = Vector2(1200, 50)
layout_mode = 1
offset_left = -600.0
offset_top = 80.0
offset_right = 600.0
offset_bottom = 130.0
theme_override_styles/background = SubResource("StyleBoxEmpty_4wc4c")
theme_override_styles/fill = SubResource("StyleBoxFlat_l5cnn")
value = 60.0
script = ExtResource("10_xr656")

[node name="DamageBar" type="ProgressBar" parent="Health/HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_kc20v")
theme_override_styles/fill = SubResource("StyleBoxFlat_dlt3w")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="Health/HealthBar"]
wait_time = 0.4
one_shot = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 8, 11, 11)
projection = 1
fov = 120.0
size = 18.0
script = ExtResource("2_21l07")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0)

[node name="Target" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("3_eavgj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8662, 0.827181, -0.240799)
visible = false
camera = NodePath("../Camera3D")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
navigation_mesh = SubResource("NavigationMesh_upwes")

[node name="Player" parent="NavigationRegion3D" instance=ExtResource("4_a5htx")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 1.8, 0)
script = ExtResource("5_qc7ky")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 0, 0.35)
size = Vector3(18, 1, 20)
material = ExtResource("6_4oh8s")

[node name="Zombies" type="Node3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="GridMap" type="GridMap" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
top_level = true
mesh_library = ExtResource("7_loxtq")
cell_size = Vector3(1, 1, 1)
collision_layer = 0
collision_mask = 0
data = {
"cells": PackedInt32Array(65534, 65533, 1441795, 65534, 65534, 3, 65534, 65535, 1441795, 65534, 0, 3, 65534, 1, 3, 65534, 2, 3, 65535, 65533, 1441795, 0, 65533, 1441795, 1, 65533, 1441795, 65535, 65534, 1441795, 0, 65534, 1441795, 1, 65534, 1441795, 1, 65535, 1441795, 0, 65535, 1441795, 65535, 65535, 1441795, 65535, 0, 1441795, 0, 0, 1441795, 0, 1, 1441795, 65535, 1, 1441795, 65535, 2, 1441795, 0, 2, 1441795, 1, 0, 1441795, 1, 1, 1441795, 1, 2, 1441795, 65529, 65533, 1441795, 65530, 65533, 1441795, 65531, 65533, 1441795, 65532, 65533, 1441795, 65533, 65533, 1441795, 2, 65533, 1441795, 3, 65533, 1441795, 4, 65533, 1441795, 5, 65533, 1441795, 6, 65533, 1441795, 7, 65533, 1441795, 8, 65533, 1441795, 9, 65533, 1441795, 65529, 65534, 1441795, 65530, 65534, 1441795, 65532, 65534, 1441795, 65533, 65534, 1441795, 2, 65534, 1441795, 3, 65534, 1441795, 4, 65534, 1441795, 5, 65534, 1441795, 6, 65534, 1441795, 7, 65534, 1441795, 8, 65534, 1441795, 9, 65534, 1441795, 65531, 65534, 1441795, 65529, 65535, 1441795, 65530, 65535, 1441795, 65531, 65535, 1441795, 65532, 65535, 1441795, 2, 65535, 1441795, 3, 65535, 1441795, 4, 65535, 1441795, 5, 65535, 1441795, 6, 65535, 1441795, 7, 65535, 1441795, 8, 65535, 1441795, 9, 65535, 1441795, 65533, 65535, 1441795, 65533, 0, 1441795, 65533, 1, 1441795, 65533, 2, 1441795, 65532, 2, 1441795, 65532, 1, 1441795, 65532, 0, 1441795, 65531, 0, 1441795, 65530, 0, 1441795, 65529, 0, 1441795, 65529, 1, 1441795, 65529, 2, 1441795, 65530, 2, 1441795, 65531, 2, 1441795, 65531, 1, 1441795, 65530, 1, 1441795, 2, 0, 1441795, 2, 1, 1441795, 2, 2, 1441795, 3, 2, 1441795, 4, 2, 1441795, 5, 2, 1441795, 6, 2, 1441795, 7, 2, 1441795, 7, 1, 1441795, 8, 1, 1441795, 8, 2, 1441795, 9, 2, 1441795, 9, 1, 1441795, 9, 0, 1441795, 8, 0, 1441795, 7, 0, 1441795, 6, 0, 1441795, 5, 0, 1441795, 4, 0, 1441795, 3, 0, 1441795, 3, 1, 1441795, 4, 1, 1441795, 5, 1, 1441795, 6, 1, 1441795, 8, 65532, 1441795, 7, 65532, 1441795, 6, 65532, 1441795, 5, 65532, 1441795, 4, 65532, 1441795, 65529, 65532, 1441795, 65530, 65532, 1441795, 65531, 65532, 1441795, 65532, 65532, 1441795, 65533, 65532, 1441795, 65534, 65532, 1441795, 65535, 65532, 1441795, 0, 65532, 1441795, 1, 65532, 1441795, 2, 65532, 1441795, 3, 65532, 1441795, 9, 65532, 1441795, 9, 65531, 1441795, 8, 65531, 1441795, 7, 65531, 1441795, 6, 65531, 1441795, 5, 65531, 1441795, 4, 65531, 1441795, 3, 65531, 1441795, 2, 65531, 1441795, 1, 65531, 1441795, 0, 65531, 1441795, 65535, 65531, 1441795, 65534, 65531, 1441795, 65533, 65531, 1441795, 65532, 65531, 1441795, 65531, 65531, 1441795, 65530, 65531, 1441795, 65529, 65531, 1441795, 65529, 65530, 1441795, 65530, 65530, 1441795, 65531, 65530, 1441795, 65532, 65530, 1441795, 65533, 65530, 1441795, 65534, 65530, 1441795, 65535, 65530, 1441795, 0, 65530, 1441795, 1, 65530, 1441795, 2, 65530, 1441795, 3, 65530, 1441795, 4, 65530, 1441795, 5, 65530, 1441795, 6, 65530, 1441795, 7, 65530, 1441795, 8, 65530, 1441795, 9, 65530, 1441795, 9, 65529, 1441795, 8, 65529, 1441795, 7, 65529, 1441795, 6, 65529, 1441795, 5, 65529, 1441795, 4, 65529, 1441795, 3, 65529, 1441795, 2, 65529, 1441795, 1, 65529, 1441795, 0, 65529, 1441795, 65535, 65529, 1441795, 65534, 65529, 1441795, 65533, 65529, 1441795, 65532, 65529, 1441795, 65531, 65529, 1441795, 65530, 65529, 1441795, 65529, 65529, 1441795, 65529, 65528, 1441795, 65530, 65528, 1441795, 65531, 65528, 1441795, 65532, 65528, 1441795, 65533, 65528, 1441795, 65534, 65528, 1441795, 65535, 65528, 1441795, 0, 65528, 1441795, 1, 65528, 1441795, 2, 65528, 1441795, 3, 65528, 1441795, 4, 65528, 1441795, 5, 65528, 1441795, 6, 65528, 1441795, 7, 65528, 1441795, 8, 65528, 1441795, 9, 65528, 1441795, 9, 65527, 1441795, 8, 65527, 1441795, 7, 65527, 1441795, 6, 65527, 1441795, 5, 65527, 1441795, 4, 65527, 1441795, 3, 65527, 1441795, 2, 65527, 1441795, 1, 65527, 1441795, 0, 65527, 1441795, 65535, 65527, 1441795, 65534, 65527, 1441795, 65533, 65527, 1441795, 65532, 65527, 1441795, 65531, 65527, 1441795, 65530, 65527, 1441795, 65529, 65527, 1441795, 65529, 3, 1441795, 65530, 3, 1441795, 65531, 3, 1441795, 65532, 3, 1441795, 65534, 3, 1441795, 65535, 3, 1441795, 0, 3, 1441795, 1, 3, 1441795, 3, 3, 1441795, 4, 3, 1441795, 5, 3, 1441795, 6, 3, 1441795, 7, 3, 1441795, 8, 3, 1441795, 9, 3, 1441795, 3, 4, 1441795, 1, 4, 1441795, 65535, 4, 1441795, 65534, 4, 1441795, 65533, 4, 1441795, 65533, 3, 1441795, 2, 3, 1441795, 2, 4, 1441795, 0, 4, 1441795, 4, 4, 1441795, 5, 4, 1441795, 6, 4, 1441795, 7, 4, 1441795, 8, 4, 1441795, 9, 4, 1441795, 9, 5, 1441795, 8, 5, 1441795, 7, 5, 1441795, 6, 5, 1441795, 5, 5, 1441795, 4, 5, 1441795, 3, 5, 1441795, 2, 5, 1441795, 1, 5, 1441795, 0, 5, 1441795, 65535, 5, 1441795, 65534, 5, 1441795, 65533, 5, 1441795, 65532, 5, 1441795, 65531, 5, 1441795, 65530, 5, 1441795, 65529, 5, 1441795, 65529, 4, 1441795, 65530, 4, 1441795, 65531, 4, 1441795, 65532, 4, 1441795)
}
script = ExtResource("8_2jqwb")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Grid" type="Node3D" parent="NavigationRegion3D"]

[node name="ChangeSafeZone" type="Timer" parent="NavigationRegion3D"]
wait_time = 1.5
autostart = true

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Clock" parent="Control" instance=ExtResource("7_x8y3u")]

[node name="ZombieHead" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 115.0
offset_top = -302.0
offset_right = 155.0
offset_bottom = -262.0
grow_vertical = 0

[node name="ZombieHead" parent="ZombieHead" instance=ExtResource("11_w2c7v")]

[connection signal="start_timer" from="." to="Control/Clock" method="_on_world_start_timer"]
[connection signal="timeout" from="Health/HealthBar/Timer" to="Health/HealthBar" method="_on_timer_timeout"]
[connection signal="on_target_pressed" from="Target" to="." method="_on_target_on_target_pressed"]
[connection signal="timeout" from="NavigationRegion3D/ChangeSafeZone" to="NavigationRegion3D/Player" method="changeTarget"]
[connection signal="clock_timer_finished" from="Control/Clock" to="." method="_on_clock_clock_timer_finished"]
